--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@
                         <div class="space-y-8">
                             <p class="text-2xl lg:text-5xl text-gradient font-bold uppercase"> introducing my self </p>
                             <p class="text-base lg:text-xl leading-tight">
-                                "A vocational high school student with a strong interest in UI/UX design, currently studying both UI Motion Graphics and web development. I am also
-                                passionate about robotics and documentation."
+                                "I am a vocational high school student with a strong interest in UI/UX design. Currently, I’m focusing on UI Motion Graphics and Front-End Development, specifically with Tailwind, and progressing toward JavaScript. I also have an interest in robotics and documentation."
                             </p>
                         </div>
                         <div class="bg-primary w-full mt-16 flex justify-center items-center p-10">
